[build-system]
requires = ["setuptools >= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["src"]

[project]
requires-python = ">= 3.12"
dependencies = [
    "kubernetes",
    "cryptography",
    "fastapi",
    "shortuuid",
    "pydantic-settings",
    "httpx",
    "pyjwt",
    "fastapi-async-sqlalchemy",
    "asyncpg",
    "cactus-test-definitions==1.8.14",
    "cactus-schema==0.0.11",
    "cactus-runner @ git+https://github.com/bsgip/cactus-runner.git@v1.6.9",
    "fastapi-pagination",
    "fastapi-utils",
    "typing_inspect",                                                        # fastapi-utils missing dep?
    "pyasn1",
    "reportlab",
    "types-reportlab",
]
name = "cactus-orchestrator"
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "bandit",
    "flake8",
    "mypy",
    "types-python-dateutil",
    "types-tzlocal",
    "types-pyasn1",
    "black",
    "coverage",
    "kubernetes-stubs",
    "isort",
]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-env",
    "pytest-postgresql",
    "psycopg",
    "assertical",
    "pytest-asyncio",
    "asgi_lifespan",
]

[tool.black]
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src/"]
testpaths = "tests"
env = [
    "D:TEST_EXECUTION_FQDN=cactus-testing.test.fqdn",
    "D:ORCHESTRATOR_DATABASE_URL=postgresql+asyncpg://fake:fake@fake/fake",
    "D:JWTAUTH_JWKS_URL=https://jwks.com/jwks",
    "D:JWTAUTH_ISSUER=https://test-cactus-issuer.example.com",
    "D:JWTAUTH_AUDIENCE=test-cactus-orchestrator",
    "D:CACTUS_PYTEST_WITHOUT_KUBERNETES=true",
]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "idleteardowntask_enable(seconds): Mark test that enables teardown task and sets repeat every duration",
]

[tool.bandit]
exclude_dirs = ["tests", "alembic"]

[tool.mypy]
exclude = ["tests", "alembic"]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
namespace_packages = true
warn_redundant_casts = true

[[tool.mypy.overrides]] # temporary until these libs are typed.
module = ["cactus_runner", "cactus_test_definitions", "cactus_runner.client"]
ignore_missing_imports = true

[tool.setuptools.dynamic]
version = { attr = "cactus_orchestrator.__version__" }
